relaxng-dump/tests/snapshots/dump__tuto3d.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <foo email match/>
</addressBook>
