relaxng-dump/tests/snapshots/dump__tuto4b.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<doc>
  <bold/>
  <italic/>
  <span style/>
  text
</doc>
