relaxng-dump/tests/snapshots/dump__tuto6.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<card bool>
  <preferredFormat>
    <ff>
      text
    </ff>
  </preferredFormat>
</card>
