relaxng-dump/tests/snapshots/dump__tuto6a.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<card>
  <preferredFormat>
    <ff>
      text
    </ff>
  </preferredFormat>
</card>
