relaxng-dump/tests/snapshots/dump__tuto9.snap
---
source: relaxng-dump/tests/dump.rs
expression: output
---
<addressBook>
  <card>
    <email>
      text
    </email>
    <name>
      text
    </name>
    <note>
      <code/>
      <em/>
      text
    </note>
  </card>
</addressBook>
